Add a page for manage account

--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -67,8 +67,8 @@
         <h2 class="membership-title">Account & Security</h2>
         <button class="membership-wrapper">
             <div class="membership-div">
-                <h3 class="membership-titleh3">Your account</h3>
-                <h4 class="membership-title4">Account settings, change number</h4>
+                <h3 class="membership-titleh3" routerLink="/account">Your account</h3>
+                <h4 class="membership-title4" routerLink="/account">Account settings, change number</h4>
             </div>
             <div>
                 <img src="../../assets/img/arrow right.svg" alt="right arrow icon" />
