--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -3,11 +3,11 @@
         <img src="../../assets/img/arrow-left.svg" />
     </div>
 <div class="profile-fist-content">
-    <img class="profile-first-content-img" src="#" alt="user-image" />
-    <h2 class="user-name">User Name</h2>
-    <h3 class="user-email">Email adress</h3>
+    <img (click)="fileInput.click()" class="profile-first-content-img" [src]="photoURL$" alt="user-image" />
+    <input class="d-none" type="file" #fileInput (change)="changeImage($event)" accept="image/*">
+    <h2 class="user-name">{{ userName }}</h2>
+    <h3 class="user-email">{{ userEmail }}</h3>
 </div>
-
     <div class="option-container">
         <div class="option-items">
             <button type="button" class="option-items-button">
@@ -74,6 +74,12 @@
                 <img src="../../assets/img/arrow right.svg" alt="right arrow icon" />
             </div>
         </button>
+    </div>
+
+    <div>
+        <a class="deconnection" routerLink="/">
+            <p> Se déconnecter </p>
+        </a>
     </div>
 
 </div>
