--- a/src/app/account/account.component.html
+++ b/src/app/account/account.component.html
@@ -10,7 +10,7 @@
         </div>
         <div class="option-items">
             <p class="content">Password</p>
-            <input type="email" value="{{user.uid}}" formControlName="password" required />
+            <input type="email" value="**********" formControlName="password" required (click)="onClickPasswordInput()"/>
         </div>
     </div>
 </div>
