Modify location of routerLink and add input type password

--- a/src/app/changePassword/changePassword.component.html
+++ b/src/app/changePassword/changePassword.component.html
@@ -6,7 +6,7 @@
     <div class="option-items">
         <p class="title">Password</p>
         <form [formGroup]="passwordForm">
-            <input type="email" formControlName="password" required />
+            <input type="password" formControlName="password" required />
         </form>
         <div class="button-container">
             <button type="button" (click)="changePassword()" class="submit">Submit</button>
