--- a/src/app/movie/movie.component.html
+++ b/src/app/movie/movie.component.html
@@ -3,7 +3,7 @@
     <div routerLink="/movies" class="go-back">
         <img src="../../assets/img/arrow-left.svg" loading="lazy" />
     </div>
-    <div class="share">
+    <div class="share" (click)="clickOnShareOpen()">
         <img src="../../assets/img/share-icon.svg" loading="lazy" />
     </div>
     <div class="singleFilmContent">
@@ -36,12 +36,14 @@
             <img src="../../assets/img/check-circle.svg" *ngIf="!seen; else iconSeenBlock" loading="lazy" class="like-movie" (click)="addMovieToLikes(movie)"/>
             <ng-template #iconSeenBlock class="like-movie"><img src="../../assets/img/check-circle-green.svg" loading="lazy" class="like-movie"/></ng-template>
         </div>
-        <share-buttons theme="modern-dark"
-            [include]="['copy', 'facebook', 'email', 'messenger', 'mix', 'line', 'linkedin', 'pinterest', 'print', 'reddit', 'sms', 'telegram', 'tumblr', 'twitter', 'viber', 'vk', 'xing', 'whatsapp']"
-            [showIcon]="true"
-            [showText]="true"
-            description="Angular Share Buttons"
-            class="pt-5">
-        </share-buttons>
+        <div class="shareContent" [ngClass]="openShare ? 'show' : '' ">
+            <share-buttons theme="modern-dark"
+                [include]="['copy', 'facebook', 'email', 'messenger', 'mix', 'line', 'linkedin', 'pinterest', 'print', 'reddit', 'sms', 'telegram', 'tumblr', 'twitter', 'viber', 'vk', 'xing', 'whatsapp']"
+                [showIcon]="true"
+                [showText]="true"
+                description="Manage your films, series and more !"
+                class="pt-5 pr-5">
+            </share-buttons>
+        </div>
     </div>
 </div>
