--- a/src/app/movie/movie.component.scss
+++ b/src/app/movie/movie.component.scss
@@ -41,7 +41,7 @@
 
 .singleFilmContent {
     position: relative;
-    padding: 20px;
+    // padding: 20px;
     background-color: $black;
     width: 100%;
     margin-top: 40vh;
@@ -106,6 +106,7 @@
         font-size: 16px;
         line-height: 19px;
         margin-top: 30px;
+        padding: 3%;
 
     }
 
@@ -116,6 +117,7 @@
         font-weight: 400;
         font-size: 15px;
         line-height: 24px;
+        padding: 3%;
     }
 
     .cast-list {
@@ -157,5 +159,20 @@
 
     }
 
+    .shareContent{
+        top: 100%;
+        height: 0;
+        opacity: 0;
 
+        &.show {
+            position: absolute;
+            width: 100%;
+            top: 0;
+            height: 100%;
+            overflow: hidden;
+            transition: all 1s;
+            opacity: 1;
+            background-color: $grey;
+        }
+    }
 }
