Ask user to log again in case of error in request to change email or password

--- a/src/app/changeEmail/changeEmail.component.html
+++ b/src/app/changeEmail/changeEmail.component.html
@@ -13,4 +13,5 @@
         </div>
     </div>
     <div *ngIf="changed" class="title">Email adress changed !</div>
+    <div *ngIf="errorChangingEmail" class="title">Please log in again to change your email</div>
 </div>
