--- a/src/app/changePassword/changePassword.component.html
+++ b/src/app/changePassword/changePassword.component.html
@@ -13,4 +13,5 @@
         </div>
     </div>
     <div *ngIf="changed" class="title">Password changed !</div>
+    <div *ngIf="errorChangingPassword" class="title">Please log in again to change your password</div>
 </div>
