--- a/src/app/movie/movie.component.scss
+++ b/src/app/movie/movie.component.scss
@@ -176,3 +176,30 @@
         }
     }
 }
+
+.rating-list li {
+    display: flex;
+    justify-content: flex-end;
+    color: #ddd;
+    padding: 10px 5px;
+  
+}
+  
+.star-container {
+    display: flex;
+    justify-content: flex-end;
+}
+
+.rating-list li:hover,
+.rating-list li:hover ~ li, .rating-list li.selected {
+    color: #ffd700;
+}
+  
+.rating-list {
+    display: inline-block;
+    list-style: none;
+}
+
+.star {
+    height: 18px;
+}
