Add a link to route public profile

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -12,7 +12,7 @@
             </a>
         </li>
         <li>
-            <a routerLink="/movies">
+            <a routerLink="/public">
                 <img src="../../assets/img/tv-icon.svg" alt="TV Icon">
             </a>
         </li>
