--- a/src/app/account/account.component.scss
+++ b/src/app/account/account.component.scss
@@ -4,7 +4,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-top: 30px;
+    margin-top: 50px;
 }
 .title {
     text-align: center;
@@ -48,7 +48,7 @@ input {
 .option-items {
     display: flex;
     flex-direction: column;
-    // margin: 10px;
+    margin: 10px;
 }
 
 .email-content {
@@ -56,6 +56,7 @@ input {
     justify-content: space-between;
     align-items: center;
     width: 150%;
+    margin-top: 15px;
 }
 
 li {
