--- a/src/app/publicComponent/public.component.html
+++ b/src/app/publicComponent/public.component.html
@@ -1,48 +1,16 @@
-<div class="container">
+<div class="container" *ngIf="users$ | async as user">
     <div routerLink="/movies" class="go-back">
         <img src="../../assets/img/arrow-left.svg" />
     </div>
     <h1 class="title">News</h1>
     <h3 class="subtitle">Explorez ce que regarde vos amis</h3>
 
-    <div class="public-container">
-        <div class="public-wrapper">
-            <h3 class="public-title">Mickael Brunet</h3>
-            <h4 class="films-section">Films aimés</h4>
-            <div class="films-content">
-                <div>
-                    photo
-                </div>
-                <div>
-                    photo
-                </div>
-                <div>
-                    photo
-                </div>
+    <div class="public-container" *ngFor="let singleUser of user">
+         <div class="public-wrapper">
+            <div class="public-profile-header">
+                <img class="profile-first-content-img" [src]=singleUser.finalUser.photoURL alt="user-image" />
+                <h3 class="public-title">{{singleUser.finalUser.displayName}}</h3>
             </div>
-        </div>
-    </div>
-
-    <div class="public-container">
-        <div class="public-wrapper">
-            <h3 class="public-title">Leo Philip</h3>
-            <h4 class="films-section">Films aimés</h4>
-            <div class="films-content">
-                <div>
-                    photo
-                </div>
-                <div>
-                    photo
-                </div>
-                <div>
-                    photo
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="public-container">
-        <div class="public-wrapper">
-            <h3 class="public-title">Yohann Tonerre</h3>
             <h4 class="films-section">Films aimés</h4>
             <div class="films-content">
                 <div>
