--- a/src/app/publicComponent/public.component.html
+++ b/src/app/publicComponent/public.component.html
@@ -5,24 +5,21 @@
     <h1 class="title">News</h1>
     <h3 class="subtitle">Explorez ce que regarde vos amis</h3>
 
-    <div class="public-container" *ngFor="let singleUser of user">
+    <!-- <div class="public-container" *ngFor="let singleUser of user">
          <div class="public-wrapper">
             <div class="public-profile-header">
                 <img class="profile-first-content-img" [src]=singleUser.finalUser.photoURL alt="user-image" />
                 <h3 class="public-title">{{singleUser.finalUser.displayName}}</h3>
             </div>
             <h4 class="films-section">Films aimés</h4>
-            <div class="films-content">
-                <div>
-                    photo
+            <div>
+                <div class="films-content" *ngIf="usersMovies$ | async as usersMovie" >
+                    <div *ngFor="let singleMovie of usersMovie">
+                        <h4 class="hello">{{singleMovie.movies[0].original_title}}</h4>
+                    </div>
                 </div>
-                <div>
-                    photo
-                </div>
-                <div>
-                    photo
-                </div>
-            </div>
         </div>
-    </div>
+        </div>
+    </div> -->
+    <tp-movies-public-profile-container *ngFor="let singleUser of user" [displayName]="singleUser.finalUser.displayName" [userUid]="singleUser.finalUser.uid" [photoURL]="singleUser.finalUser.photoURL"></tp-movies-public-profile-container>
 </div>
