--- a/src/app/publicComponent/public.component.scss
+++ b/src/app/publicComponent/public.component.scss
@@ -86,6 +86,7 @@
     font-weight: 400;
     font-size: 15px;
     line-height: 15px;
+    margin-top: 2rem
 }
 
 .public-wrapper {
@@ -97,6 +98,8 @@
 .films-content {
     display: flex;
     justify-content: space-around;
+    margin-top: 2rem;
+    color: $white;
 }
 
 .go-back {
@@ -126,4 +129,8 @@
     display: flex;
     justify-content: flex-start;
     align-items: center;
+}
+
+.hello {
+    color: $white;
 }
