feat: add a check register

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -4,6 +4,7 @@ $grey: #7B9399;
 $purple: #D702FB;
 $blue: #1A54FF;
 $input-bg: #1C1A2E;
+$red: rgb(255, 53, 53);
 $purple-gradient: linear-gradient(220deg, $purple, $blue);
 
 @mixin btn {
