--- a/src/app/welcome-page/welcome-page.component.scss
+++ b/src/app/welcome-page/welcome-page.component.scss
@@ -72,6 +72,10 @@
             width: 100%;
             padding: 1rem;
         }
+
+        .error-message{
+            color: $red;
+        }
     }
 
     .reset-pwd-message{
