--- a/src/app/profile/profile.component.scss
+++ b/src/app/profile/profile.component.scss
@@ -31,8 +31,11 @@
 }
 
 .option-items-button {
-    width: 120px;
-    height: 79px;
+    flex: 1;
+
+    p {
+        margin-top: .5rem;
+    }
 }
 
 .user-name {
@@ -53,8 +56,9 @@
 
 .option-container {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
+    gap: 1rem;
     padding: 20px;
 }
 
@@ -137,5 +141,18 @@ hr {
         margin-left: auto;
         margin-right: auto;
         border: 2px solid $purple;
+    }
+}
+
+
+.deconnection {
+
+    text-decoration: none;
+    margin-top: 2rem;
+    display: block;
+
+    p {
+        font-size: 2rem;
+        padding: 1rem 2rem;
     }
 }
