--- a/src/app/publicComponent/public.component.html
+++ b/src/app/publicComponent/public.component.html
@@ -4,5 +4,8 @@
     </div>
     <h1 class="title">News</h1>
     <h3 class="subtitle">Explorez ce que regarde vos amis</h3>
-    <tp-movies-public-profile-container *ngFor="let singleUser of user" [displayName]="singleUser.finalUser.displayName" [userUid]="singleUser.finalUser.uid" [photoURL]="singleUser.finalUser.photoURL"></tp-movies-public-profile-container>
+    <button (click)="aled()">aled</button>
+    <tp-movies-public-profile-container *ngFor="let singleUser of user" [displayName]="singleUser.finalUser.displayName"
+        [userUid]="singleUser.finalUser.uid"
+        [photoURL]="singleUser.finalUser.photoURL"></tp-movies-public-profile-container>
 </div>
