:sparkles: feat: add stars to watched films

--- a/src/app/movie/movie.component.scss
+++ b/src/app/movie/movie.component.scss
@@ -141,6 +141,7 @@
     }
 
     .like-container {
+        margin-top: 2rem;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -153,7 +154,7 @@
         }
 
         .like-movie {
-            height: 50px;
+            height: 30px;
         }
 
     }
