:lipstick: style: improve front

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -7,7 +7,7 @@
             </a>
         </li>
         <li>
-            <a routerLink="/movies">
+            <a routerLink="/search/">
                 <img src="../../assets/img/explore-icon.svg" alt="Explore Icon">
             </a>
         </li>
@@ -16,11 +16,7 @@
                 <img src="../../assets/img/tv-icon.svg" alt="TV Icon">
             </a>
         </li>
-        <li>
-            <a routerLink="/movies">
-                <img src="../../assets/img/download-icon.svg" alt="Download Icon">
-            </a>
-        </li>
+
         <li>
             <a routerLink="/profile">
                 <img src="../../assets/img/profile-icon.svg" alt="Profile Icon">
