--- a/src/app/changeEmail/changeEmail.component.scss
+++ b/src/app/changeEmail/changeEmail.component.scss
@@ -1,5 +1,16 @@
 @import '../../variables';
 
+.container {
+    min-height: 100vh;
+    background-color: $black;
+    color: $white;
+
+    h3 {
+        color: $white;
+        padding-top: 15vh;
+    }
+}
+
 .go-back {
     background-color: $grey;
     position: absolute;
@@ -31,6 +42,7 @@
 
 input {
     width: 100%;
+    padding: 1rem 2rem;
 }
 
 .content {
