--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -2,12 +2,12 @@
     <div routerLink="/movies" class="go-back">
         <img src="../../assets/img/arrow-left.svg" />
     </div>
-<div class="profile-fist-content">
-    <img (click)="fileInput.click()" class="profile-first-content-img" [src]="photoURL$" alt="user-image" />
-    <input class="d-none" type="file" #fileInput (change)="changeImage($event)" accept="image/*">
-    <h2 class="user-name">{{ userName }}</h2>
-    <h3 class="user-email">{{ userEmail }}</h3>
-</div>
+    <div class="profile-fist-content">
+        <img (click)="fileInput.click()" class="profile-first-content-img" [src]="photoURL$" alt="user-image" />
+        <input class="d-none" type="file" #fileInput (change)="changeImage($event)" accept="image/*">
+        <h2 class="user-name">{{ userName }}</h2>
+        <h3 class="user-email">{{ userEmail }}</h3>
+    </div>
     <div class="option-container">
         <div class="option-items">
             <button type="button" class="option-items-button">
@@ -83,3 +83,5 @@
     </div>
 
 </div>
+
+<tp-movies-footer></tp-movies-footer>
