:sparkles: feat: add correct username and img in header

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,7 @@
 <header class="header-wrapper">
     <span id="logo">
-        <img src="../../assets/img/logo.svg" alt="Logo" />
-        <span class="header-title">Ndelok</span>
+        <img [src]="photoURL$" alt="Logo" />
+        <span class="header-title">{{ userName }}</span>
     </span>
     <span class="header-notification">
         <img src="../../assets/img/notifications.svg" alt="Notification Icon" />
