add public profile

--- a/src/app/public-profile-container/public-profile-container.html
+++ b/src/app/public-profile-container/public-profile-container.html
@@ -2,7 +2,7 @@
          <div class="public-wrapper">
             <div class="public-profile-header">
                 <img class="profile-first-content-img" [src]="photoURL" alt="user-image" />
-                <h3 class="public-title">{{displayName}} a aimé </h3>
+                <h3 class="public-title"><span routerLink="/profile/{{userUid}}">{{displayName}}</span> a aimé </h3>
             </div>
             <div>
                 <div class="films-content" >
