--- a/src/app/search/search.component.scss
+++ b/src/app/search/search.component.scss
@@ -3,6 +3,7 @@
 .search-page-container {
     background-color: $black;
     padding-bottom: 10vh;
+    padding-top: 2rem;
     min-height: 90vh;
 
 
