fix: sort elements

--- a/src/app/publicComponent/public.component.html
+++ b/src/app/publicComponent/public.component.html
@@ -6,5 +6,5 @@
     <h3 class="subtitle">Explorez ce que regarde vos amis</h3>
     <tp-movies-public-profile-container *ngFor="let singleUser of user" [displayName]="singleUser.finalUser.displayName"
         [userUid]="singleUser.finalUser.uid"
-        [photoURL]="singleUser.finalUser.photoURL"></tp-movies-public-profile-container>
+        [photoURL]="singleUser.finalUser.photoURL" (newItemEvent)="addItem($event)"></tp-movies-public-profile-container>
 </div>
