--- a/src/app/public-profile-container/public-profile-container.html
+++ b/src/app/public-profile-container/public-profile-container.html
@@ -5,7 +5,7 @@
         <div class="public-profile-header">
             <img class="profile-first-content-img" [src]="photoURL ? photoURL : '../../assets/img/user_default.png'"
                 alt="user-image" />
-            <h3 class="public-title"><span routerLink="/profile/{{userUid}}">{{displayName}}</span> a vu </h3>
+            <h3 class="public-title">{{displayName}} a vu </h3>
         </div>
         <div>
             <div class="films-content">
