:sparkles: feat: can search user

--- a/src/app/publicComponent/public.component.html
+++ b/src/app/publicComponent/public.component.html
@@ -4,7 +4,11 @@
     </div>
     <h1 class="title">News</h1>
     <h3 class="subtitle">Explorez ce que regarde vos amis</h3>
-    <tp-movies-public-profile-container *ngFor="let singleUser of user" [displayName]="singleUser.finalUser.displayName"
-        [userUid]="singleUser.finalUser.uid"
+    <form (submit)="submit()" [formGroup]="searchForm" class="search-input-container">
+        <input formControlName="query" class="search-input" type="text" placeholder="What are you watching today">
+        <img (click)="submit()" src="../../assets/img/search-icon.svg" alt="Search Icon">
+    </form>
+    <tp-movies-public-profile-container *ngFor="let singleUser of users"
+        [displayName]="singleUser.finalUser.displayName" [userUid]="singleUser.finalUser.uid"
         [photoURL]="singleUser.finalUser.photoURL"></tp-movies-public-profile-container>
 </div>
