--- a/src/app/publicComponent/public.component.html
+++ b/src/app/publicComponent/public.component.html
@@ -3,8 +3,10 @@
         <img src="../../assets/img/arrow-left.svg" />
     </div>
     <h1 class="title">News</h1>
-    <h3 class="subtitle">Explorez ce que regarde vos amis</h3>
+    <h3 class="subtitle">Explorez ce que regarde vos amis</h3>a
+    aaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
     <tp-movies-public-profile-container *ngFor="let singleUser of user" [displayName]="singleUser.finalUser.displayName"
         [userUid]="singleUser.finalUser.uid"
         [photoURL]="singleUser.finalUser.photoURL" (newItemEvent)="addItem($event)"></tp-movies-public-profile-container>
+        aaaaaaaaaaaaaaaaaaa
 </div>
