--- a/src/app/public-profile-container/public-profile-container.html
+++ b/src/app/public-profile-container/public-profile-container.html
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
     integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-<div *ngIf="userMovies$ | async as usersMovie" class="public-container">
+<div *ngIf="userMovies" class="public-container">
     <div class="public-wrapper">
         <div class="public-profile-header">
             <img class="profile-first-content-img" [src]="photoURL ? photoURL : '../../assets/img/user_default.png'"
@@ -11,7 +11,7 @@
             <div class="films-content">
                 <div>
                     <div class="films-content">
-                        <div *ngFor="let singleMovie of usersMovie.movies" class="liked-movies">
+                        <div *ngFor="let singleMovie of userMovies" class="liked-movies">
                             <img src="https://image.tmdb.org/t/p/w500{{singleMovie.poster_path}}" loading="lazy"
                                 class="movie-img" />
                             <h4 class="movie-title">{{singleMovie.original_title}}</h4>
